--- a/index.html
+++ b/index.html
@@ -12,8 +12,37 @@
 </head>
 
 <body>
+
+    <!-- start of my content-->
+
     <div class="container">
    
+        <header class="navigation-bar">
+            <img src="/Users/tomhessburg/Desktop/lambda/Sprint-Challenge--User-Interface/img/lambda-black.png" alt="logo">
+
+
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+
+        
+        <img src="/Users/tomhessburg/Desktop/lambda/Sprint-Challenge--User-Interface/img/jumbo.jpg" alt="" class="topCenter">
+
+
+
+
+
+
+
+
+
+        <!-- end of my content-->
+
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
