--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 
 <body>
-
+    <div class="container">
     <!-- start of my content-->
 
-    <div class="container">
+   
    
         <header class="navigation-bar">
-            <img src="/Users/tomhessburg/Desktop/lambda/Sprint-Challenge--User-Interface/img/lambda-black.png" alt="logo">
+            <img src="img/lambda-black.png" alt="logo">
 
 
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
@@ -31,7 +31,7 @@
         </header>
 
         
-        <img src="/Users/tomhessburg/Desktop/lambda/Sprint-Challenge--User-Interface/img/jumbo.jpg" alt="" class="topCenter">
+        <img src="img/jumbo.jpg" alt="" class="topCenter">
 
 
 
@@ -43,6 +43,10 @@
 
         <!-- end of my content-->
 
+
+
+
+        
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
