--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="#">Products</a>
-                <a href="#">Blog</a>
+                <a href="/Users/tomhessburg/Desktop/lambda/Sprint-Challenge--User-Interface/blog.html">Blog</a>
                 <a href="#">Contact</a>
             </nav>
         </header>
