--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#">Home</a>
                 <a href="about.html">About</a>
                 <a href="#">Products</a>
-                <a href="#">Blog</a>
+                <a href="/Users/tomhessburg/Desktop/lambda/Sprint-Challenge--User-Interface/blog.html">Blog</a>
                 <a href="#">Contact</a>
             </nav>
         </header>
